--- a/index.html
+++ b/index.html
@@ -111,17 +111,14 @@
       <input type="checkbox"> <label for="">Projeto Concluido</label>
       </div>
       <div id="infosPessoais">
-        <label for="">Seu Nome</label>
-        <input type="text" placeholder="Qual é seu nome completo?">
+        <label id="name" for="">Seu Nome</label>
+        <input type="text" id="name" placeholder="Qual é seu nome completo?">
         <label for="">E-mail</label>
         <input type="text" placeholder="Qual é o seu e-mail?">
         <label for="">Telefone</label>
         <input type="text" placeholder="Qual seu numero de telefone?">
         </div>
-        <div class="btn-container">
-          <button class="btn">Acessar</button>
-
-        </div>
+      <button id="btn-form" class="btn">Acessar</button>
     </form>
   </div>
 </body>
